--- a/index.html
+++ b/index.html
@@ -1,71 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Dropdown  Menu | NHH</title>
-        <meta charset="UFT-8">
-        <meta name="viewport" content="width=device-width" , initial-scale=1.0>
-        <link rel="stylesheet"
-            href="/redirect?Id=%2f3LUyFeMv%2bWjNf2pJ%2fgqJjcWdiwHc2aG7zzlg%2f5MfyvNj6xx10lsfnDn80zpO7PLs14VBVJbFEGoKybJi0GTYA%3d%3d"
-            integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-
-    <body>
-        <div class="header">
-            <div class="menu-bar">
-                <ul>
-                    <li class="active"><a href="#"><i class=" fa fas fa-home"></i>Home</a></li>
-                    <li><a href="#"><i class=" fa fas fa-user"></i>About us</a>
-                        <div class="sub-menu-1">
-                            <ul>
-                                <li><a href="#">Mission</a></li>
-                                <li><a href="#">Vision</a></li>
-                                <li><a href="#">Team</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li><a href="#"><i class=" fa fas fa-clone"></i>Services</a>
-                        <div class="sub-menu-1">
-                            <ul>
-                                <li class="hover-me"><a href="#">Web Designing  &#8594;</a>
-                                    <div class="sub-menu-2">
-                                        <ul>
-                                            <li><a href="#">Front-end</a></li>
-                                            <li><a href="#">Back-end</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="hover-me"><a href="#">Marketing  &#8594;</a>
-                                    <div class="sub-menu-2">
-                                        <ul>
-                                            <li><a href="#">Social Media</a></li>
-                                            <li><a href="#">SEO</a></li>
-                                            <li><a href="#">Emial Marketing</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="hover-me"><a href="#">Mobile App  &#8594;</a>
-                                    <div class="sub-menu-2">
-                                        <ul>
-                                            <li><a href="#">Android App</a></li>
-                                            <li><a href="#">iOS App</a></li>
-                                            <li><a href="#">Iconic App</a></li>
-                                            <li><a href="#">Flutter App</a></li>
-                                            <li><a href="#">Unnity App</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li><a href="#"><i class="fa fas fa-users"></i>Clients</a></li>
-                    <li><a href="#"><i class="fa fas fa-angellist"></i>Investors</a></li>
-                    <li><a href="#"><i class="fa fas fa-inr"></i>Pricing</a></li>
-                    <li><a href="#"><i class="fa fas fa-edit"></i>Training</a></li>
-                    <li><a href="#"><i class="fa fas fa-phone"></i>Contact</a></li>
-                </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animated Web Design</title>
+    <link rel="stylesheet"
+    href="/redirect?Id=%2f3LUyFeMv%2bWjNf2pJ%2fgqJjcWdiwHc2aG7zzlg%2f5MfyvNj6xx10lsfnDn80zpO7PLs14VBVJbFEGoKybJi0GTYA%3d%3d"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="hero">
+        <div class="navbar">
+            <img src="/images/logo.png" class="logo">
+            <button type="button"> Sign up</button>
+        </div>
+        <div class="content">
+            <small>Welcome to our</small>
+            <h1>World's <br>Creative Studio</h1>
+            <button type="button">Take a tour</button>
+        </div>
+        <div class="side-bar">
+            <img src="/images/menu.png" class="menu">
+            <div class="social-links">
+                <img src="/images/fb.png" alt="">
+                <img src="/images/tw.png" alt="">
+                <img src="/images/ig.png" alt="">
+            </div>
+            <div class="useful-links">
+                <img src="/images//info.png" alt="">
+                <img src="/images/share.png" alt="">
             </div>
         </div>
-    </body>
+        <div class="bubbles">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+        </div>
+        <div class="bubbles2">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+            <img src="/images/bubble.png" alt="">
+        </div>
+    </div>
+</body>
 </html>
